# slam_project_buggy

./: CMakeLists.txt  README.md  package.xml  sample.launch  slam_project_buggy.launch
action/: setDirectionRobot.action
data/final_data/house_father/: 2017-08-05-17-05-03.bag
data/final_data/my_house/: my_map.yaml
launch/: custom_launch.launch  geotiff_mapper.launch  hector_mapping.launch  path_mapping.launch  slam.launch
launchBuggy/: autonomus_moving.launch  costmap_point_to_point.launch  footprint_robot.yaml  goToPoint.launch  guess_robot_position_amcl.launch
msg/: AllSidesDistance.msg  LaserMsgDistance.msg
rviz/: rplidar.rviz  test_costmap.rviz
scripts/: a_star_algo.py  action_client_setDirectionRobot.py  get_data_side.py  navigToPoint.py  pointToPointPath.py  pointToPointPathSendOrders.py  publishDataSide.py  publishDistanceAllSide.py  publish_data_side.py
